fix fonts and improve CSS - more contrast and bigger now, easier to read!

--- a/prism.css
+++ b/prism.css
@@ -3,10 +3,10 @@ https://prismjs.com/download.html#themes=prism-okaidia&languages=markup+css+clik
 code[class*=language-],
 pre[class*=language-] {
     color: #f8f8f2;
-    background: 0 0;
+    background: #0e0f0f;
     text-shadow: 0 1px rgba(0, 0, 0, .3);
     font-family: 'FiraCode', 'Nimbus Mono PS', 'Liberation Mono', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', 'Lucida Console', monospace;
-    font-size: 1em;
+    font-size: 0.95em;
     text-align: left;
     white-space: pre;
     word-spacing: normal;
