--- a/style.css
+++ b/style.css
@@ -4,19 +4,35 @@
         src: url('/assets/FiraCodeNerdFontMono-Regular.woff2');
 }
 
+/* from Google Fonts, under the Open Font License */
 @font-face {
-        /* from Google Fonts, under the Open Font License */
         font-family: "Atkinson Hyperlegible";
-        src: url('/assets/AtkinsonHyperlegible-Regular.woff2');
+        src: local('Atkinson Hyperlegible'), url('/assets/AtkinsonHyperlegible-Regular.woff2');
+}
+
+@font-face {
+        font-family: "Atkinson Hyperlegible Bold";
+        src: local('Atkinson Hyperlegible Bold'), url('/assets/AtkinsonHyperlegible-Bold.woff2');
+}
+
+@font-face {
+        font-family: "Atkinson Hyperlegible Italic";
+        src: local('Atkinson Hyperlegible Italic'), url('/assets/AtkinsonHyperlegible-Italic.woff2');
+        src: url('/assets/AtkinsonHyperlegible-BoldItalic.woff2');
+}
+
+@font-face {
+        font-family: "Atkinson Hyperlegible Bold Italic";
+        src: local('Atkinson Hyperlegible Bold Italic') url('/assets/AtkinsonHyperlegible-BoldItalic.woff2');
 }
 
 body {
         color: #dadada;
-        background: #202020;
+        background: #181a1b;
         margin: 1em auto;
         max-width: 90vw;
         padding: 0 .62em;
-        font: 1.0em/1.35 'Atkinson Hyperlegible', sans-serif;
+        font: 18px/1.35 'Atkinson Hyperlegible', sans-serif;
 }
 
 a:link,
@@ -29,11 +45,17 @@ a:visited:hover {
         color: #6bb794
 }
 
-h1,
+h1 {
+        font: 'Atkinson Hyperlegible Bold', sans-serif;
+        line-height: 1.2;
+        font-size: 36px;
+}
+
 h2,
 h3 {
+        font: 'Atkinson Hyperlegible Bold', sans-serif;
         line-height: 1.2;
-        font: 'Atkinson Hyperlegible', sans-serif;
+        font-size: 24px;
 }
 
 wrap {
@@ -53,11 +75,6 @@ wrap {
 
         body {
                 font-size: 20px;
-        }
-
-        pre,
-        code {
-                font-size: 16px;
         }
 }
 
